# BAGI

./: .coverage  .gitignore  README.md  graph.db
BOS/: .gitignore  Cargo.toml  README.md
BOS-Full-OS/: .gitignore  Cargo.toml  README.md  config.toml
BOS-Full-OS/.github/workflows/: profile-merge.yml
BOS-Full-OS/crates/bos-ts-graphd/: Cargo.toml
BOS-Full-OS/crates/bos-ts-graphd/src/: main.rs
BOS-Full-OS/crates/bos-ts-installer/src/: main.rs
BOS-Full-OS/crates/bos-ts-kernel/: Cargo.toml
BOS-Full-OS/crates/bos-ts-kernel/src/: lib.rs
BOS-Full-OS/crates/bos-ts-orbital/: Cargo.toml
BOS-Full-OS/crates/bos-ts-shell/: Cargo.toml
BOS-Full-OS/crates/bos-ts-shell/src/: main.rs
BOS-Full-OS/crates/bos-ts-updater/src/: main.rs
BOS-Full-OS/docs/: GITHUB.md  README.md  REDOX_KERNEL_HOOK.md  TS-DESKTOP-CLASS-ROADMAP.md  VFS-UNIVERSAL-GRAPH.md
BOS-Full-OS/patches/: INJECT-POINTS.md  redox-kernel-ts-hook.diff
BOS-Full-OS/patches/kernel-files/: bos_ts_idle.rs
BOS-Full-OS/recipes/bos-ts-graphd/: recipe.toml
BOS-Full-OS/recipes/bos-ts-graphd/source/src/: main.rs
BOS-Full-OS/recipes/bos-ts-installer/: recipe.toml
BOS-Full-OS/recipes/bos-ts-installer/source/: Cargo.toml
BOS-Full-OS/recipes/bos-ts-installer/source/src/: main.rs
BOS-Full-OS/recipes/bos-ts-kernel/: recipe.toml
BOS-Full-OS/recipes/bos-ts-kernel/source/: Cargo.toml
BOS-Full-OS/recipes/bos-ts-orbital/: orbital.toml  recipe.toml
BOS-Full-OS/recipes/bos-ts-orbital/source/: Cargo.toml
BOS-Full-OS/recipes/bos-ts-shell/: orbital.toml  recipe.toml
BOS-Full-OS/recipes/bos-ts-shell/source/: Cargo.toml
BOS-Full-OS/recipes/bos-ts-updater/: recipe.toml
BOS-Full-OS/recipes/bos-ts-updater/source/: Cargo.toml
BOS-Full-OS/scripts/: _copy_tree.ps1  _ts_os_kernel_path.ps1  _ts_os_kernel_path.sh  apply-idle-hook.ps1  apply-idle-hook.sh  apply-kernel-integration.ps1  apply-kernel-integration.sh  apply-overlay.ps1  apply-overlay.sh  build-podman.ps1  build-podman.sh  build-ts-os.ps1  build-ts-os.sh  clone-redox.ps1  clone-redox.sh  merge-bos-profile.ps1  merge-bos-profile.sh  merge_bos_into_redox_profile.py  setup-windows.ps1  test-boot.ps1  test-boot.sh
BOS-Full-OS/ts/: CURRENT-WAVE  README.md  hardware-tier.toml  os-phases.toml  update-channel.toml  vfs-graph.toml
BOS/bos-shell/: Cargo.toml
BOS/bos-shell/src/: main.rs
BOS/docs/: GITHUB.md  README.md
BOS/kernel/: Cargo.toml
BOS/kernel/src/: lib.rs
docs/: GITHUB-BAGI.md
(+144 files in other folders)
