# BOS-Full-OS — Thinking System (TS) integration workspace for Redox OS
# TS = Thinking System / Thinking Wave — NOT TypeScript (see README.md)

[workspace]
resolver = "2"
members = [
    "crates/bos-ts-kernel",
    "crates/bos-ts-shell",
    "crates/bos-ts-orbital",
    "crates/bos-ts-installer",
    "crates/bos-ts-updater",
    "crates/bos-ts-graphd",
]
exclude = [
    # Cookbook trees under recipes/*/source are built by Redox; keep out of this workspace.
    "recipes/bos-ts-installer/source",
    "recipes/bos-ts-updater/source",
    "recipes/bos-ts-graphd/source",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
