[package]
name = "bos-shell"
description = "TS-OS userspace shell — egui desktop (Wave 1 skeleton)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bos-shell"
path = "src/main.rs"

[dependencies]
bos-kernel = { path = "../kernel" }
eframe = { version = "0.29", default-features = true, features = ["default_fonts"] }
egui = "0.29"
