[package]
name = "bos-ts-orbital"
description = "Orbclient TS graph shell — Thinking System live desktop (not TypeScript)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bos-ts-orbital"
path = "src/main.rs"

[target.'cfg(target_os = "redox")'.dependencies]
orbclient = "0.3"
bos-ts-kernel = { path = "../bos-ts-kernel" }
